ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
    libheif \
    examples \
    extra \
    fuzzing \
    gdk-pixbuf \
    gnome \
    go \
    scripts

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libheif.pc

EXTRA_DIST = \
    .travis.yml \
    appveyor.yml \
    autogen.sh \
    CMakeLists.txt \
    examples/CMakeLists.txt \
    libheif/CMakeLists.txt \
    CPPLINT.cfg \
    README.md \
    pre.js \
    post.js \
    build-emscripten.sh \
    examples/COPYING
