ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
    libheif \
    examples \
    extra \
    fuzzing \
    gnome \
    go \
    scripts

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libheif.pc

EXTRA_DIST = \
    .travis.yml \
    appveyor.yml \
    autogen.sh \
    CMakeLists.txt \
    CPPLINT.cfg \
    README.md \
    pre.js \
    post.js \
    build-emscripten.sh
